feat: user service client 를 통해 로그인된 유저의 요청인지 확인